走査高速化、Everything 1.5 Alpha対応、走査用データ構築並列化、SQLiteConfig見直し、ログ形式変更、起動バッチのエンコード修正